<resources>
    <string name="app_name">Health Manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Button</string>
    <string name="gotoHome">Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="last_name">Last Name</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create_one">Create One</string>
    <string name="take_survey">Take Survey</string>
    <string name="appointments">Appointments</string>
    <string name="referred_medicines">Referred Medicines</string>
    <string name="predict_health_issues">Predict Health Issues</string>
</resources>