<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/take_survey"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/take_survey" />
        <item
            android:id="@+id/predict_health_issues"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/predict_health_issues" />
        <item
            android:id="@+id/appointments"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/appointments" />
        <item
            android:id="@+id/referred_medicines"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/referred_medicines" />
        <item
            android:id="@+id/action_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/action_settings" />
    </group>
</menu>